docs/static/styles/_layout.scss
/* ... */
.searchDimmer {
  width: 100vw;
  height: 100vh;
  background-color: $dark-04;
  opacity: 0.7;
  display: none;
  top: 64px;
  left: 0;
  position: fixed;
  z-index: 10;

  &.searchDimmerActive {
    display: block;

    @media screen and (max-width: 767px) {
      display: none;
    }
  }
}

.mainTabs {
  margin-top: 20px;

  .mainTab {
    position: relative;
    background: #FFFFFF;
    border: 1px solid #ECECF0;
    box-sizing: border-box;
    border-radius: 4px;
    margin-bottom: 20px;
    cursor: pointer;
    top: 0;
    transition: all .2s ease;
    box-shadow: none;
    width: calc(50% - 20px);

    &.mainTabRight {
      margin-left: 20px;
    }

    @media screen and (max-width: 992px) {
      width: 100%;

      &.mainTabRight {
        margin-left: 0;
      }
    }

    &:hover {
      top: -3px;
      box-shadow: 0px 2px 10px rgba(177, 183, 197, 0.2);
    }

    .mainTabContent {
      margin: 10px 0 10px 0;
      min-height: 98px;

      .mainTabImg {
        position: relative;
        top: 25px;
        left: 15px;
      }

      .mainTabLink {
        font-family: $header-font;
        font-weight: bold;
        line-height: 32px;
        font-size: 19px;
        letter-spacing: 0.02em;
        color: $brand-color;
      }

      .mainTabText {
        font-family: $body-font;
        line-height: 22px;
        font-size: 16px;
        letter-spacing: 0.02em;
        color: #50556C;
        max-width: 100%;
      }
    }
  }
}

span.group-header {
  transition: color .2s ease;
  cursor: pointer;
  &:hover {
    color: $brand-color;
  }
}

.group-list {
  height: 0;
  visibility: hidden;
  max-height: 0;
  opacity: 0;
  line-height: 0;
  transition: all .2s ease-out;
  &.active {
    height: 100%;
    visibility: visible;
    max-height: 1000px;
    opacity: 1;
    transition: all .2s ease-in;
  }
}

.logo-column {
  margin-top: 5px;
}

.language-javascript, .language-javascript-statsbot {
  margin-top: 24px;
}

.hidden {
  display: none;
}

.home {
  padding-bottom: 4px;
}

.menuWrapper {
  height: 100%;
  width: inherit;
  background: $sidebar-bg;
  padding: 16px 24px;
  overflow-y: auto;
  overflow-x: hidden;
  position: fixed;
  //padding-left: calc(9999px + 24px);
  //padding-right: 24px;
  //margin-left: -9999px;
  //min-width: 245px;
  max-height: calc(100% - 66px);
  //background: $light;

  @media screen and (max-width: 767px) {
    max-height: calc(100% - 48px); // footer is fixed on mobile screen
    min-width: 95%;
  }

  .antMenu {
    font-family: inherit;
    height: 100%;
    border-right: none;
    background: none;
    color: inherit;

    @media screen and (max-width: 767px) {
      padding-left: 20px;
    }

    :global {
      .ant-menu-item {
        display: inline-flex;
        align-items: center;
        color: inherit;
        padding: 8px 0;
        font-family: inherit;
        font-size: 1rem;
        line-height: 1.5rem;
        letter-spacing: 0.02em;
        padding-left: 0 !important;
        margin-top: 0 !important;
        margin-bottom: 0 !important;
        background: none !important;
        border-right: none;
        height: auto;
        min-height: 40px;

        a {
          color: inherit;
          white-space: break-spaces;
        }

        &:after {
          display: none;
        }

        a:hover {
          color: $brand-color;
        }

        &.ant-menu-item-selected {
          a {
            color: $brand-color;
          }

          font-weight: 500;
        }
      }

      .ant-menu:not(.ant-menu-horizontal) .ant-menu-item-selected {
        background-color: white;
      }

      .ant-menu-submenu {

        .ant-menu {
          background: none;
        }

        .ant-menu-submenu-title {
          color: inherit;
          padding-left: 0 !important;
          line-height: 40px;
          min-height: 40px;
          height: auto;
          font-size: 16px;
          margin-top: 0 !important;
          margin-bottom: 0 !important;

          .ant-menu-item {
            padding-left: 16px;
            font-size: 15px;
            line-height: 25px;
          }

          .ant-menu-submenu-arrow {
            &:before, &:after {
              background: $content-color;
            }
          }
        }

        .ant-menu-submenu-title-active, .ant-menu-submenu-title:hover {
          color: $brand-color;

          a {
            color: $brand-color;
          }

          .ant-menu-submenu-arrow {
            &:before, &:after {
              background: $brand-color;
            }
          }
        }

        .ant-menu-sub {
          color: $dark-01;

          .ant-menu-item {
            margin-left: 20px;
            font-size: 15px;
            line-height: 25px;
            height: 29px;
            min-height: 20px;

            &:first-child {
              margin-top: 6px !important;
            }

            &:last-child {
              margin-bottom: 6px !important;
            }

            &:not(.ant-menu-item-selected) {
              a {
                color: $dark-01;
              }
            }

            &.ant-menu-item-active {
              color: $brand-color;

              a {
                color: $brand-color;
              }
            }
          }
        }
        .ant-menu-item-group-title {
          text-transform: uppercase;
          font-size: 0.8rem;
          line-height: 1.125rem;
          letter-spacing: 0.04rem;
          padding-left: 10px;
          font-weight: normal;
          color: $dark-04;
        }
      }
    }
  }
}

.noscroll {
  overflow: hidden;

  &.scrollDisabled {
    position: fixed;
    overflow-y: scroll;
  }
}
/* ... */

